erDiagram
    USER ||--o{ CATEGORY : "создаёт"
    USER ||--o{ EXPENSE : "создаёт"
    CATEGORY ||--o{ EXPENSE : "содержит"

    USER {
        int id PK
        string email
        string password_hash
        datetime created_at
    }

    CATEGORY {
        int id PK
        int user_id FK
        string name
        string color
    }

    EXPENSE {
        int id PK
        int user_id FK
        int category_id FK
        string title
        float amount
        date date
        datetime created_at
    }
